2009-04-29  John Abd-El-Malek  <jam@google.com>

        Reviewed by Dimitri Glazkov.

        Reverted my previous change to add resetChromiumPluginCache().
        https://bugs.webkit.org/show_bug.cgi?id=25318

        * plugins/chromium/PluginDataChromium.cpp:

2009-04-29  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler

        <rdar://problem/6573742> - Problem dragging standalone images from Safari to Mail

        Roll out trac.webkit.org/changeset/35867 which fixed <rdar://problem/6153432>

        Cloned <rdar://problem/6153432> to <rdar://problem/6839881> to find a better fix for that Tiger Mail bug.

        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::subresource): Remove the preload referenced check.

2009-04-29  Alpha Lam  <hclam@chromium.org>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=25430

        Provide style sheet for UI controls of media elements for Chromium port.

        * rendering/RenderThemeChromiumWin.cpp:
        (WebCore::RenderThemeChromiumWin::extraMediaControlsStyleSheet):

2009-04-29  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Darin Adler.

        Expose sudden termination to Chromium port.
        https://bugs.webkit.org/show_bug.cgi?id=25457

        * platform/SuddenTermination.h:
        * platform/chromium/ChromiumBridge.h:
        * platform/chromium/SuddenTerminationChromium.cpp: Added.
        (WebCore::disableSuddenTermination):
        (WebCore::enableSuddenTermination):

2009-04-29  Sam Weinig  <sam@webkit.org>

        Reviewed by Dimitri Glazkov.

        Remove unused EventListeners.

        * page/DOMWindow.idl:

2009-04-29  Yury Semikhatsky  <yurys@chromium.org>

        Reveal current execution line once SourceFrame content is loaded. 

        https://bugs.webkit.org/show_bug.cgi?id=25448

        Reviewed by Timothy Hatcher.

        * inspector/front-end/SourceFrame.js: